# voice_capture

./: .dockerignore  .gitignore  API_INTEGRATION.md  BUILD_INSTRUCTIONS.md  BUILD_INSTRUCTIONS_WINDOWS.md  CHANGELOG_CONTEXT_ENGINEERING.md  CONTEXT_ENGINEERING.md  CUDA_ARM64_README.md  DASHBOARD_README.md  DOCKER_README.md  Dockerfile  Dockerfile.source  FFMPEG_BUNDLING.md  MCP_README.md  OPENAPI_README.md  PLAN_LIVE_MEETING_DASHBOARD.md  QUICK_BUILD_GUIDE.md  README.md  RECORDINGS_LOCATION.md  VALIDATION_REPORT_LIVE_DASHBOARD.md  VALIDATION_REPORT_LIVE_DASHBOARD_V2.md  VoiceCapture.bat  WINDOWS_README.md  WINDOWS_SUPPORT_SUMMARY.md  audio_recorder.py  build_app.bat  build_app.sh  build_docker.sh  build_installer.bat  create_dmg.sh  create_icon.py  create_shortcut.ps1  dashboard_client.py  diarization.py  documentation.html  download_ffmpeg_windows.py  icon.icns  insert_participants.py  insert_recordings.py  install_app.sh  (+32 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
dashboard/: __init__.py  __main__.py  config.py  db.py  stats.py
dashboard/analyzer/: __init__.py  apply.py  prompts.py  provider.py  sentiment.py  summary.py  worker.py
dashboard/api/: __init__.py  ingest.py  read.py  setup.py  ws.py
dashboard/context/: __init__.py  past_refs.py
dashboard/frontend/: package-lock.json  package.json  vite.config.ts
dashboard/frontend/src/: App.tsx  types.ts
dashboard/frontend/src/components/: ActionItemsPanel.tsx  AgendaPanel.tsx  DecisionsPanel.tsx  GoalsPanel.tsx  HeaderBar.tsx  KeyMomentsPanel.tsx  PastRecordingsPanel.tsx  SpeakingTonePanel.tsx  StatsHeader.tsx
dashboard/frontend/src/pages/: HomePage.tsx  LivePage.tsx
dashboard/frontend/src/store/: useRecordingStore.ts  useWebSocket.ts
dashboard/migrations/: __init__.py  runner.py
dashboard/migrations/sql/: 001_recording.sql  002_participant.sql  003_recording_participant.sql  004_topic.sql  005_segment.sql  006_segment_topic.sql  007_recording_topic.sql  008_goal.sql  009_agenda_item.sql  010_decision.sql  011_action_item.sql  012_key_moment.sql  013_past_reference.sql  014_goal_topic_history.sql  015_apriori_setup.sql  016_segment_claimed_at.sql  017_recording_analysis_state.sql  018_key_moment_curation.sql  019_action_item_curation.sql  020_decision_curation.sql
dashboard/tests/: __init__.py  test_unit.py
plans/: PLAN_CURATED_LIVE_ANALYSIS.md  PLAN_PERIPHERAL_DECOUPLING.md
scripts/: analyze_recording.py  curate_recordings.py  import_recording.py  replay_recording.py  sync_participants_to_qdrant.py
