[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-recordings-mcp"
version = "1.0.0"
description = "MCP Server for Whisper voice recordings - provides access to recordings, metadata, and transcriptions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ralf van Meer" }
]
keywords = ["mcp", "whisper", "voice", "recordings", "transcription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
whisper-recordings-mcp = "mcp_server:run"

[project.urls]
Homepage = "https://github.com/rvmeer/voice_capture"
Repository = "https://github.com/rvmeer/voice_capture"

[tool.hatch.build.targets.wheel]
only-include = [
    "mcp_server.py",
    "logging_config.py",
    "recording_manager.py",
    "transcription_utils.py",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "mcp_server.py",
    "logging_config.py",
    "recording_manager.py",
    "transcription_utils.py",
    "pyproject.toml",
    "README.md",
]
