[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-capture-mcp"
version = "1.0.0"
description = "MCP Server for getting transcriptions of voice recordings - provides access to metadata, and transcriptions of recordings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ralf van Meer" }
]
keywords = ["mcp", "capture", "voice", "recordings", "transcription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
voice-capture-mcp = "mcp_server:run"

[project.urls]
Homepage = "https://github.com/rvmeer/voice_capture"
Repository = "https://github.com/rvmeer/voice_capture"

[tool.hatch.build.targets.wheel]
only-include = [
    "mcp_server.py",
    "logging_config.py",
    "recording_manager.py",
    "transcription_utils.py",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "mcp_server.py",
    "logging_config.py",
    "recording_manager.py",
    "transcription_utils.py",
    "pyproject.toml",
    "README.md",
]
